--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ pypdf>=3.17.4
 pdf2image>=1.17.0
 Pillow>=10.3.0
 tabulate>=0.9.0
+unstructured[pdf]>=0.11.0
 
 # Streamlit for local app interface (optional)
 streamlit>=1.35.0
