--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ docarray[common]>=0.40.0
 tiktoken>=0.6.0
 
 # Gemini (Google Generative AI)
+langchain-google-genai>=0.0.6
 google-generativeai==0.8.5
 google-ai-generativelanguage==0.6.15
 
